2002-12-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java (check):
	Add base string to give a hint about from which URL source resource
	should get loaded.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: Set base.
	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: Likewise.

2002-12-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/StringBuffer/StringBufferTest.java (getChars):
	Add big offsets test.

2002-12-19  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/ClassTest.java
	(test_getClassloader): getClassLoader is never required to return
	null; removed test.

2002-12-15  Raif Naffah  <raif@fl.net.au>

	* gnu/testlet/java/math/BigInteger/modInverse.java: New test.

2002-12-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/CharArrayWriter/ProtectedVars.java: Use try
	catch block for implementations that (wrongly) declare
	ArrayWriter.write() throws IOException.
	* gnu/testlet/java/io/CharArrayWriter/BasicTests.java: Likewise.

2002-12-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/SerTest.java: Extend SerBase,
	not TestSerBase.

2002-12-13  David J. King  <david_king@softhome.net>

	* gnu/testlet/java/io/CharArrayWriter/BasicTests.java: New test.
	* gnu/testlet/java/io/CharArrayWriter/ProtectedVars.java: New test.

2002-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/SerTest.java: New test.
	* gnu/testlet/java/io/ObjectInputOutput/SerBase.java: New helper.

2002-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/DataInputStream/ReadStream.java: Add comment
	about copied methods in DataOutputStream tests since braindead Uses
	doesn't handle packages.
	* gnu/testlet/java/io/DataInputStream/ReadStream2.java: Likewise.
	* gnu/testlet/java/io/DataOutputStream/WriteRead.java: Copy method
	from DataInputStream and remove Uses..