@@ -1,3 +1,7 @@
+2002-12-22  Daryl Lee <dol@sources.redhat.com>
+	* gnu/testlet/java/io/FileDescriptor/jdk11.java: complete 
+	method tests for class
+
 2002-12-22  Mark Wielaard  <mark@klomp.org>
 
 	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java (check):
